[package]
name = "repomaker"
version = "0.1.0"
edition = "2021"
description = "A cli tool for managing your repos on github"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
